crates/cognicode-macros/tests/newtype-ui/newtype_invalid_derive.stderr
error: expected attribute, found derive macro `newtype`
 --> tests/newtype-ui/newtype_invalid_derive.rs
  |
  | #[newtype(derive(NotAValidTrait))]
  |   ^^^^^^^ not an attribute
